[package]
name = "gamie"
version = "0.9.1"
authors = ["EAimTY <ea.imty@gmail.com>"]
description = "A Rust library provides abstractions for several classic tiny games"
categories = ["games", "game-development", "no-std"]
keywords = ["game", "board", "gomoku", "minesweeper", "reversi"]
edition = "2021"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/EAimTY/gamie"

[features]
default = ["std"]
std = ["snafu/std"]
connect_four = []
gomoku = []
minesweeper = ["rand"]
reversi = []
tictactoe = []

[dependencies]
rand = { version = "0.8.5", default-features = false, optional = true }
serde = { version = "1.0.210", default-features = false, features = ["alloc", "derive"], optional = true }
snafu = { version = "0.8.5", default-features = false }

[dev-dependencies]
gamie = { path = ".", features = ["std", "serde", "connect_four", "gomoku", "minesweeper", "reversi", "tictactoe"] }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }

[package.metadata.docs.rs]
all-features = true
