[package]
name = "gamie"
version = "0.10.0"
authors = ["EAimTY <ea.imty@gmail.com>"]
description = "A Rust library provides abstractions for several classic tiny games"
categories = ["games", "game-development", "no-std"]
keywords = ["game", "board", "gomoku", "minesweeper", "reversi"]
edition = "2024"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/EAimTY/gamie"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = ["alloc", "thiserror/std"]
alloc = []
serde = ["dep:serde"]
connect_four = []
gomoku = []
minesweeper = ["dep:rand", "serde?/alloc"]
reversi = []
tictactoe = []

[dev-dependencies.gamie]
path = "."
default-features = false
features = ["std", "serde", "connect_four", "gomoku", "minesweeper", "reversi", "tictactoe"]

[dependencies.rand]
version = "0.9.2"
default-features = false
optional = true

[dependencies.serde]
version = "1.0.228"
default-features = false
features = ["derive"]
optional = true

[dependencies.thiserror]
version = "2.0.17"
default-features = false

[dev-dependencies.rand]
version = "0.9.2"
default-features = false
features = ["std", "thread_rng"]
