[package]
name = "gamie"
version = "0.14.0"
authors = ["EAimTY <ea.imty@gmail.com>"]
description = "A Rust library provides abstractions for several classic tiny games"
categories = ["games", "game-development", "no-std"]
keywords = ["game", "board", "gomoku", "minesweeper", "reversi"]
edition = "2024"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EAimTY/gamie"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
alloc = []
serde = ["dep:serde"]
rkyv = ["dep:rkyv"]
connect_four = ["dep:thiserror"]
gomoku = ["dep:thiserror"]
minesweeper = ["alloc", "dep:thiserror", "dep:rand", "serde?/alloc", "rkyv?/alloc"]
reversi = ["dep:thiserror"]
tictactoe = ["dep:thiserror"]

[dependencies]
rand = { version = "0.10.1", default-features = false, optional = true }
rkyv = { version = "0.8.15", default-features = false, optional = true }
serde = { version = "1.0.228", default-features = false, features = ["derive"], optional = true }
thiserror = { version = "2.0.18", default-features = false, optional = true }

[dev-dependencies]
rand = { version = "0.10.1", default-features = false, features = ["std", "thread_rng"] }
